--- a/paper/Results.tex
+++ b/paper/Results.tex
@@ -21,48 +21,48 @@ Excluding the trailing comma tests, 2to3 was still more accurate than fix\_print
 
 2to3's failure to translate the \verb|test_idempotency_1| test correctly is intentional, as translating with 2to3 is intended to be \textit{idempotent}, meaning that if Python 2 code is fed into 2to3, producing Python 3 code, then feeding that code back into 2to3 should result in no changes. This is important as it allows for consistency and reproducibility of translations. If 2to3 always surrounded the content to be printed in print statements as fix\_print is specified to do, then it would not be idempotent as it would always add parentheses in print statements, even for Python 3 code it already translated. This is a clear example of how formal verification is not a panacea for all code issues. Formal verification that all content in print statements would be surrounded by parentheses did specify that all resulting translations would be correct. However it also made the translator nonidempotent, which is also a good quality to have, especially in situations in large codebases where some code may be translated and some may not be, and it is desired that translated code is not further modified. Thus, any formal verification of a program is only as good as its specification. If the specification is faulty or implies an undesirable effect (such as nonidempotency), then the verified program will contain such flaws despite being 'mathematically proven to be correct.' In real codebases, it is unlikely that \lstinline[language=Python, style=pythonstyle]|print ()| is ever used as it has no useful effect, and 2to3 translates virtually ever other print statement accurately, thus in real scenarios where a Python 2 to 3 translator is needed, 2to3's emphasis on idempotency at the cost of a few edge cases being inaccurately translated is likely preferable to fix\_print's guaranteed correctness at the cost of changing already translated files in a codebase each time a new translation is run.
 
-\subsection{Performance}
-\pgfplotstableread[row sep=\\,col sep=&]{
-    Test                                  & 2to3 Average Run Time (ms) & fix_print Average Run Time (ms) \\
-    test_1                               & 273                        & 4.4                              \\
-    test_2                               & 253.6                      & 3.6                              \\
-    test_3                               & 262.2                      & 3.8                              \\
-    test_4                               & 253.8                      & 3.6                              \\
-    test_5                               & 268                        & 3.6                              \\
-    test_prefix_preservation            & 267.8                      & 4                                \\
-    test_trailing_comma_1              & 289.8                      & 4.6                              \\
-    test_trailing_comma_2              & 270.6                      & 3.8                              \\
-    test_trailing_comma_3              & 279.8                      & 4.4                              \\
-    test_tuple                           & 260                        & 4                                \\
-    test_idempotency_1                  & 273.8                      & 4.4                              \\
-    test_idempotency_2                  & 281                        & 4.2                              \\
-    test_vargs_without_trailing_comma & 296                        & 3.6                              \\
-    test_with_trailing_comma           & 275.4                      & 3.6                              \\
-    test_no_trailing_comma             & 290.2                      & 3.4                              \\
-    test_spaces_before_file            & 290.4                      & 3.6                              \\
-    }\mydata
+% \subsection{Performance}
+% \pgfplotstableread[row sep=\\,col sep=&]{
+%     Test                                  & 2to3 Average Run Time (ms) & fix_print Average Run Time (ms) \\
+%     test_1                               & 273                        & 4.4                              \\
+%     test_2                               & 253.6                      & 3.6                              \\
+%     test_3                               & 262.2                      & 3.8                              \\
+%     test_4                               & 253.8                      & 3.6                              \\
+%     test_5                               & 268                        & 3.6                              \\
+%     test_prefix_preservation            & 267.8                      & 4                                \\
+%     test_trailing_comma_1              & 289.8                      & 4.6                              \\
+%     test_trailing_comma_2              & 270.6                      & 3.8                              \\
+%     test_trailing_comma_3              & 279.8                      & 4.4                              \\
+%     test_tuple                           & 260                        & 4                                \\
+%     test_idempotency_1                  & 273.8                      & 4.4                              \\
+%     test_idempotency_2                  & 281                        & 4.2                              \\
+%     test_vargs_without_trailing_comma & 296                        & 3.6                              \\
+%     test_with_trailing_comma           & 275.4                      & 3.6                              \\
+%     test_no_trailing_comma             & 290.2                      & 3.4                              \\
+%     test_spaces_before_file            & 290.4                      & 3.6                              \\
+%     }\mydata
 
-\begin{figure*}[ht]
-    \begin{tikzpicture}
-        \begin{axis}[
-                ybar,
-                ylabel={Run Time (ms)},
-                symbolic x coords={test_1, test_2, test_3, test_4, test_5, test_prefix_preservation, test_trailing_comma_1, test_trailing_comma_2, test_trailing_comma_3, test_tuple, test_idempotency_1, test_idempotency_2, test_vargs_without_trailing_comma, test_with_trailing_comma, test_no_trailing_comma, test_spaces_before_file},
-                xtick=data,
-                xticklabel style={
-                    rotate=90
-                }
-            ]
-            \addplot table[x=Test,y=2to3 Average Run Time (ms)]{\mydata};
-            \addplot table[x=Test,y=fix_print Average Run Time (ms)]{\mydata};
-            \legend{2to3 Average Run Time (ms), fix\_print Average Run Time (ms)}
-        \end{axis}
-    \end{tikzpicture}
-    \caption{Mean run times of both 2to3 and fix_print for each test.}
-\end{figure*}
+% \begin{figure*}[ht]
+%     \begin{tikzpicture}
+%         \begin{axis}[
+%                 ybar,
+%                 ylabel={Run Time (ms)},
+%                 symbolic x coords={test_1, test_2, test_3, test_4, test_5, test_prefix_preservation, test_trailing_comma_1, test_trailing_comma_2, test_trailing_comma_3, test_tuple, test_idempotency_1, test_idempotency_2, test_vargs_without_trailing_comma, test_with_trailing_comma, test_no_trailing_comma, test_spaces_before_file},
+%                 xtick=data,
+%                 xticklabel style={
+%                     rotate=90
+%                 }
+%             ]
+%             \addplot table[x=Test,y=2to3 Average Run Time (ms)]{\mydata};
+%             \addplot table[x=Test,y=fix_print Average Run Time (ms)]{\mydata};
+%             \legend{2to3 Average Run Time (ms), fix\_print Average Run Time (ms)}
+%         \end{axis}
+%     \end{tikzpicture}
+%     \caption{Mean run times of both 2to3 and fix_print for each test.}
+% \end{figure*}
 
 
-fix\_print was faster than 2to3 at translation, with fix\_print translating code around two orders of magnitude faster than 2to3. This supports the hypothesis that a formally verified transpiler would perform better than a non-formally verified compiler. However, it is of vital importance to reemphasize the fact that both transpilers are written in two different programming languages. 2to3 was written in Python, whereas fix\_print is written in Coq, with code extracted to OCaml. Due to the fundamental nature of both languages, programs written in OCaml will nearly always be faster than similar programs written in Python, due to the fact that Python programs are relatively slow due to the nature of how the Python language executes programs compared to other languages [CITE HERE]. Thus, a conclusion that formal verification lead to a performance gain is unwarranted, since the languages that both transpilers were written in affected performance much more than whether formal verification was used or not. However, the data suggests that formal verification is not a significant drag on performance. This lends credibility to advocates of formal verification, as possible performance regressions that might come along with the adoption of formal verification seem to not occur.
+fix\_print was faster than 2to3 at translation, with fix\_print translating code around two orders of magnitude faster than 2to3. This supports the hypothesis that a formally verified transpiler would perform better than a non-formally verified compiler. However, it is of vital importance to reemphasize the fact that both transpilers are written in two different programming languages. 2to3 was written in Python, whereas fix\_print is written in Coq, with code extracted to OCaml. Due to the fundamental nature of both languages, programs written in OCaml will nearly always be faster than similar programs written in Python, due to the fact that Python programs are relatively slow due to the nature of how the Python language executes programs compared to other languages. Thus, a conclusion that formal verification lead to a performance gain is unwarranted, since the languages that both transpilers were written in affected performance much more than whether formal verification was used or not. However, the data suggests that formal verification is not a significant drag on performance. This lends credibility to advocates of formal verification, as possible performance regressions that might come along with the adoption of formal verification seem to not occur.
 
 \subsection{Feasibility}
-Formal verification added a considerable time cost to the development of a transpiler compared to if formal verification was not used. Development of fix\_print took around three weeks, whereas a similar transpiler developed without formal verification would have taken at least half of that time, in the researcher's estimation. A programmer with more experience in formal verification naturally would have taken less time in developing and verifying a transpiler, 
+Formal verification added a considerable time cost to the development of a transpiler compared to if formal verification was not used. Development of fix\_print took around three weeks for only a single 2to3 fixer, of which there are 52 in total. A similar transpiler developed without formal verification would have taken at least half of that time, in the researcher's estimation. For programmers more experienced in formal verification, formal verification of such a project would likely take a lesser proportion of time; one programmer who worked on a formaly verification project estimated that it took 10\% more effort than if it were done without formal verification \autocite{Woodcock}. Formal verification of a Python 2 to 3 transpiler is likely technically feasible, as shown in this project, and it did certainly show effectiveness in catching edge cases. However, unlike in the transportation or compiler fields, Python 2 to 3 translation is not very safety critical. Unlike compilers which translate human-readable source code to computer-readable but human-unreadable, Python 2 to 3 translations have human-readable inputs and outputs, resulting in comparatively easy human verification of translations compared with compiled code. Thus, a major impetus for formally verifying code translators -- verifying that code is translated perfectly correctly -- is significantly reduced for Python translations as human verification is comparatively feasible, reducing the need for formal verification. Thus, although a formally verified Python 2 to 3 transpiler is technically feasible, given the additional time investment versus the comparatively low benefit from formal verification, formal verification is likely not the overall best approach to create a Python 2 to 3 transpiler. That being said, even for this relatively trivial project, formal verification was able to fix an edge case, showing that it has great potential to be useful in other applications.
