--- a/paper/main.tex
+++ b/paper/main.tex
@@ -14,7 +14,7 @@
 
 \pgfplotsset{width=15cm,compat=1.9}
 
-\title{Formal Verification of Translations From Python 2 to 3}
+\title{Formal Verification of Python 2 to 3 Translations}
 
 \begin{document}
 \maketitle
