--- a/paper/Data.tex
+++ b/paper/Data.tex
@@ -86,7 +86,7 @@
     \centering
     \begin{tabular}{@{}l|p{5em}p{5em}p{5em}p{5em}p{5em}p{5em}@{}}
     \toprule
-    Test                                  & fix\_print Run Time 1 (ms) & fix\_print Run Time 2 (ms) & fix\_print Run Time 3 (ms) & fix\_print Run Time 4 (ms) & fix\_print Run Time 5 (ms) & fix\_print Average Run Time (ms) \\ \midrule
+    Test                                  & fix\_print Run Time 1 (ms) & fix\_print Run Time 2 (ms) & fix\_print Run Time 3 (ms) & fix\_print Run Time 4 (ms) & fix\_print Run Time 5 (ms) & fix\_print Mean Run Time (ms) \\ \midrule
     test\_1                               & 3                          & 5                          & 4                          & 5                          & 5                          & 4.4                              \\
     test\_2                               & 3                          & 3                          & 3                          & 4                          & 5                          & 3.6                              \\
     test\_3                               & 3                          & 4                          & 3                          & 4                          & 5                          & 3.8                              \\
