--- a/paper/main.tex
+++ b/paper/main.tex
@@ -22,7 +22,7 @@
 % \input{Introduction}
 % \input{Literature Review}
 % \input{Methodology}
-\input{Results}
+% \input{Results}
 \input{Conclusion}
 
 \printbibliography
