--- a/paper/Conclusion.tex
+++ b/paper/Conclusion.tex
@@ -11,4 +11,6 @@ Due to time limitations, fix\_print only covered part of
 fix\_print was only tested for computational accuracy against 2to3's test suite, which only includes 16 tests. Although the tests try to model the most common print statement structures found in real code, with such a small number of tests there is likely to be some sort of uncommon structure that is missed in the tests. Since fix\_print was not tested on a codebase of actual
 
 \subsection{Future Research}
-Formal verification using the Coq proof assistant was chosen as the method of formal verification for this project due its use in previous research into formally verified code translators \autocite{Leroy}\autocite{Zhao}. As a proof assistant, Coq is based in math as much as it is based in programming, and Coq is frequently used to proven pure mathematical theorems as well as theorems about the correctness of software programs. However, there are other methods of formal verification possible. One example is the Java Modeling Language (JML), an addition to the popular Java programming language that allows Java developers to define specifications for their existing Java code in Java itself \autocite{Burdy}. This is a simpler approach to formal verification for Java developers, since it allows them to write both their code and their specifications in one language, especially important for those working on large Java codebases where switching programming languages for formal verification is infeasible. Another possible approach is Dafny, a programming language designed for formal verification. Dafny is structurally much more similar to traditional programming languages than Coq is, but still 
+Formal verification using the Coq proof assistant was chosen as the method of formal verification for this project due its use in previous research into formally verified code translators \autocite{Leroy}\autocite{Zhao}. As a proof assistant, Coq is based in math as much as it is based in programming, and Coq is frequently used to proven pure mathematical theorems as well as theorems about the correctness of software programs. However, there are other methods of formal verification possible. One example is the Java Modeling Language (JML), an addition to the popular Java programming language that allows Java developers to define specifications for their existing Java code in Java itself \autocite{Burdy}. This is a simpler approach to formal verification for Java developers, since it allows them to write both their code and their specifications in one language, especially important for those working on large Java codebases where switching programming languages for formal verification is infeasible. Another possible approach is Dafny, a programming language designed for formal verification. Dafny is structurally much more similar to traditional programming languages than Coq is, but allows for specification of what code should do. Both JML and Dafny are more accessible than Coq for most programmers, thus building formally verified code translators with such tooling may be more feasible than building one with Coq, thus making it a possible area of future research.
+
+Another area of possible future research is in the formal verification of translators between two vastly different programming languages. The need for CompCert (the formally verified C compiler) arose from the fact that C code and machine code are extremely different and machine code is largely not readable for humans, meaning it is difficult for a person to verify that all code was translated perfectly according to specification, thus requiring the help of formal verification to ensure translations are perfectly conformant to specifications. While Python 2 and 3 have quite a few differences, at the end of the day they are still extremely similar and human verification that translations from Python 2 to 3 are correct is very feasible. Translating between programming languages with significant differences is harder to hand-verify, and thus is a promising area for for future research into formally verified code translators.
