--- a/paper/Conclusion.tex
+++ b/paper/Conclusion.tex
@@ -1,14 +1,16 @@
 \section{Conclusion}
+Virtually all software in use today has bugs, many of which lie dormant until conditions line up perfectly for those bugs to manifest themselves. This is case for 2to3, which translates some rarely used code structures inaccurately. With formal verification, the translation of print statements was made mathematically verifiable to specification of how they should be translated, resulting in a more accurate translator that performed better. However, perfect accuracy comes at the cost of harder maintainability of translated code, showing that formal verification is not a silver bullet for all software bugs. Despite that, formal verification has shown itself useful in identifying and correcting hidden bugs, and greater use of formal verification is likely to uncover even more bugs in all sorts of software. Formal verification has seen ever wider use in software development, and this project has shown that formal verification can bring benefits even outside of safety-critical applications. Code translators of all sorts, from compilers to transpilers, can all benefit from formal verification, especially when translations involve many minute details that all need to be correct. Code translators are perfect candidates for expanded use of formal verification, yet they are only one type of many software which can benefit from formal verification.
+
 \subsection{Limitations}
 
 \subsubsection{Validity}
 The validility of Transpyler rests on the validity of Coq and its code extraction capabilities. Should Coq or its code extraction capabilities prove flawed, the validility of Transpyler would also be flawed. However, given Coq's extensive history and use in both mathematics and computer science, such an outcome is unlikely.
 
 \subsubsection{Scope}
-Due to time limitations, fix\_print only covered part of 
+Due to time limitations, fix\_print only covered part of what 2to3 currently does. fix\_print only covers 1 out of 2to3's 52 fixers, and so there is much that needs to be added to make fix\_print a truly viable alternative to 2to3. In addition, the parsing stage of fix\_print (the parsing stage is where a code translators translate the unstructured text of code into a structured data structure for the translator to actually translate; to be explained more in revised methods section) was not formally verified, so fix\_print is not yet completely formally verified from end to end. However, this is common in formal verification projects, where the most important logic of a program is formally verified first and peripheral items are verified later.
 
 \subsubsection{Tests}
-fix\_print was only tested for computational accuracy against 2to3's test suite, which only includes 16 tests. Although the tests try to model the most common print statement structures found in real code, with such a small number of tests there is likely to be some sort of uncommon structure that is missed in the tests. Since fix\_print was not tested on a codebase of actual
+fix\_print was only tested for computational accuracy against 2to3's test suite, which only includes 16 tests. Although the tests try to model the most common print statement structures found in real code, with such a small number of tests there is likely to be some sort of uncommon structure that is missed in the tests. Since fix\_print was not tested on any actual codebases in current use, research on fix\_print's effectivess in real codebases should be done to further test its feasibility.
 
 \subsection{Future Research}
 Formal verification using the Coq proof assistant was chosen as the method of formal verification for this project due its use in previous research into formally verified code translators \autocite{Leroy}\autocite{Zhao}. As a proof assistant, Coq is based in math as much as it is based in programming, and Coq is frequently used to proven pure mathematical theorems as well as theorems about the correctness of software programs. However, there are other methods of formal verification possible. One example is the Java Modeling Language (JML), an addition to the popular Java programming language that allows Java developers to define specifications for their existing Java code in Java itself \autocite{Burdy}. This is a simpler approach to formal verification for Java developers, since it allows them to write both their code and their specifications in one language, especially important for those working on large Java codebases where switching programming languages for formal verification is infeasible. Another possible approach is Dafny, a programming language designed for formal verification. Dafny is structurally much more similar to traditional programming languages than Coq is, but allows for specification of what code should do. Both JML and Dafny are more accessible than Coq for most programmers, thus building formally verified code translators with such tooling may be more feasible than building one with Coq, thus making it a possible area of future research.
