--- a/paper/Data.tex
+++ b/paper/Data.tex
@@ -2,7 +2,7 @@
 \label{appendix:Data}
 \subsection{Computational Accuracy}
 
-\begin{table*}[ht]
+\begin{table}[h!]
     \centering
     \begin{tabular}{@{}l|lll@{}}
     \toprule
@@ -26,9 +26,9 @@
     \end{tabular}
     \caption{2to3 translation and output of translated code for each test.}
     \label{table:2to3-accuracy}
-\end{table*}
+\end{table}
 
-\begin{table*}[ht]
+\begin{table}[h!]
     \centering
     \begin{tabular}{@{}l|lll@{}}
     \toprule
@@ -52,11 +52,11 @@
     \end{tabular}
     \caption{fix\_print translation and output of translated code for each test.}
     \label{table:fix_print-accuracy}
-\end{table*}
+\end{table}
 
 \subsection{Performance}
 
-\begin{table*}[ht]
+\begin{table}[h!]
     \centering
     \begin{tabular}{@{}l|p{5em}p{5em}p{5em}p{5em}p{5em}p{5em}@{}}
     \toprule
@@ -80,9 +80,9 @@
     \end{tabular}
     \caption{Run times of 2to3 for each test and their means.}
     \label{table:2to3-performance}
-\end{table*}
+\end{table}
 
-\begin{table*}[ht]
+\begin{table}[h!]
     \centering
     \begin{tabular}{@{}l|p{5em}p{5em}p{5em}p{5em}p{5em}p{5em}@{}}
     \toprule
@@ -106,4 +106,4 @@
     \end{tabular}
     \caption{Run times of fix\_print for each test and their means.}
     \label{table:fix_print-performance}
-\end{table*}
+\end{table}
