--- a/paper/main.tex
+++ b/paper/main.tex
@@ -19,10 +19,10 @@
 \begin{document}
 \maketitle
 
-% \input{Introduction}
-% \input{Literature Review}
-% \input{Methodology}
-% \input{Results}
+\input{Introduction}
+\input{Literature Review}
+\input{Methodology}
+\input{Results}
 \input{Conclusion}
 
 \printbibliography
